# ai-forensics

./: .dir-locals.el  Cargo.toml  README.md
ai-forensics/: Cargo.toml
ai-forensics-common/: Cargo.toml
ai-forensics-ebpf/: Cargo.toml
ai-forensics-ebpf/src/: main.rs
ai-forensics/src/: main.rs  ws_server.rs
models/: predictions.py  simple_pytorch_nn.py  simple_pytorch_nn_model.pth
xtask/src/: build_ebpf.rs  run.rs
