[package]
name = "ai-forensics"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
ai-forensics-common = { path = "../ai-forensics-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
serde_json = "1.0.120"
warp = "0.3.7"
serde = { version = "1.0.204", features = ["derive"] }
futures-util = "0.3.30"

[[bin]]
name = "ai-forensics"
path = "src/main.rs"
